# BepInFetch

./: .gitignore  .gitmodules  .ignore  CMakeLists.txt  LICENSE  README.md  build.bat  compile_commands.json
src/: Application.cpp  Application.hpp  ConfigManager.cpp  ConfigManager.hpp  Gui.cpp  Gui.hpp  ModManager.cpp  ModManager.hpp  StaticInterface.hpp  Theme.hpp  main.cpp
